--- a/agradecimentos.html
+++ b/agradecimentos.html
@@ -28,23 +28,28 @@
         <ul class="lista">
             <li>Meltys-stock
                 <br>
-                Artista por <a href="https://www.deviantart.com/meltys-stock/gallery" target="_blank"> deviant art</a>
+                Artista por <a href="https://www.deviantart.com/meltys-stock/gallery" target="_blank"> deviantart</a>
             </li>
             <br>
             <li>lumibear
                 <br>
-                artista por <a href="https://www.deviantart.com/lumibear" target="_blank">deviant</a>
+                artista por <a href="https://www.deviantart.com/lumibear" target="_blank">deviantart</a>
             </li>
             <br>
             <li>CamaroGirl666
                 <br>
                 artista por <a href="https://www.deviantart.com/camarogirl666/favourites/12112346/model-stocks"
-                    target="_blank">deviant</a>
+                    target="_blank">deviantart</a>
             </li>
             <br>
             <li>Rowan Heuvel
                 <br>
                 artista por <a href="https://unsplash.com/@insolitus" target="_blank">unsplash</a>
+            </li>
+            <br>
+            <li>SenshiStock
+                <br>
+                artista por <a href="https://www.deviantart.com/senshistock/gallery" target="_blank">deviantart</a>
             </li>
         </ul>
     </div>
@@ -52,7 +57,7 @@
 
     <footer>
         <div class="rodape">
-            <span>Feito com <i class="fas fa-heart"></i> por Carlos
+            <span>Criado por Carlos
                 Eduardo ©
                 2020. Todos os direitos reservados.</span>
         </div>
