--- a/direitos.html
+++ b/direitos.html
@@ -52,7 +52,7 @@
 
     <footer>
         <div class="rodape">
-            <span>Feito com <i class="fas fa-heart"></i> por Carlos
+            <span>Criado por Carlos
                 Eduardo © 
                 2020.  Todos os direitos reservados.</span>
         </div>
