--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 
 <body id="conteudo">
     <div id="carregando">
-        <img src="https://media0.giphy.com/media/9Pv8ghQOFXA6lyVUqO/giphy.gif">
-
+        <i class="fas fa-sync"></i>
     </div>
 
     <header>
         <div id="top" class="container-cabecalho">
-            <a href="index.html"> <img src="logos/mug_coffee.png" alt="logo"></a>
+            <a href="index.html"> <img src="logos/mug_coffee.png" alt="logo" title="Clique para voltar ao início"></a>
             <ul class="menu">
                 <li class="linhas-menu"><a href="#galeria">Galeria</a>
                     <ul>
@@ -70,49 +69,42 @@
             <li><a href="background/alien-cat.jpg" target="_blank"><img class="foto" src="background/alien-cat.jpg"
                         alt="Gato sendo abduzido" /></a>
                 <p>Abdução.</p>
-                <div class="autor-foto">
-                    <span>Foto por: Carlos - Coffeebreak</span>
-                </div>
             </li>
 
             <li><a href="background/olharAtento.jpg" target="_blank"><img class="foto" src="background/olharAtento.jpg"
                         alt="Mulher observando uma fogueira" /></a>
                 <p>Olhar atento.</p>
-                <div class="autor-foto">
-                    <span>Foto por: Carlos - Coffeebreak</span>
-                </div>
             </li>
 
             <li><a href="background/1080.jpg" target="_blank"><img class="foto" src="background/1080.jpg"
                         alt="Navegando no espaço" /></a>
                 <p>A felicidade pode ser encontrada mesmo nas horas mais difíceis, se você lembrar de acender a luz.</p>
-                <div class="autor-foto">
-                    <span>Foto por: Carlos - Coffeebreak</span>
-                </div>
             </li>
 
             <li><a href="background/spacecar.jpg" target="_blank"><img class="foto" src="background/spacecar.jpg"
                         alt="Carro no espaço" /></a>
                 <p>Carro espacial.</p>
-                <div class="autor-foto">
-                    <span>Foto por: Carlos - Coffeebreak</span>
-                </div>
             </li>
 
             <li><a href="background/SpaceMan.jpg" target="_blank"><img class="foto" src="background/SpaceMan.jpg"
                         alt="Astronauta na lua" /></a>
                 <p>Um pequeno passo para o homem mas um grande passo para a humanidade.</p>
-                <div class="autor-foto">
-                    <span>Foto por: Carlos - Coffeebreak</span>
-                </div>
             </li>
 
             <li><a href="background/blur.jpg" target="_blank"><img class="foto" src="background/blur.jpg"
                         alt="Fotógrafo" /></a>
                 <p>A fotografia é uma das poucas coisas que tem poder sobre o tempo: ela o paralisa.</p>
+            </li>
+
+            <li><a href="background/tinta.jpg" target="_blank"><img class="foto" src="background/tinta.jpg"
+                        alt="Mulher em uma ventania" /></a>
+                <p>E o vento levou.</p>
                 <div class="autor-foto">
-                    <span>Foto por ...</span>
-                </div>
+            </li>
+
+            <li><a href="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" target="_blank"><img class="foto"
+                        src="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" alt="portal do tempo" /></a>
+                <p>Quando você olha muito tempo para o abismo, o abismo olha para você.</p>
             </li>
 
         </ul>
@@ -131,7 +123,7 @@
 
                 <a href="direitos.html"><button class="botao">Direitos</button></a>
             </div>
-            <span>Feito com <i class="fas fa-heart"></i> por Carlos Eduardo ©
+            <span>Criado por Carlos Eduardo ©
                 2020. Todos os direitos reservados. </span>
             <br>
         </div>
