--- a/animais.html
+++ b/animais.html
@@ -2,7 +2,7 @@
 <html lang='pt-br'>
 
 <head>
-    <title>CoffeeBreak</title>
+    <title>CoffeeBreak/Animais</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/coffeebreak.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,9 +25,8 @@
                 <li class="linhas-menu"><a href="#galeria">Galeria</a>
                     <ul>
                         <li><a href="">Paisagens</a></li>
-                        <li><a href="animais.html">Animais</a></li>
                         <li><a href="#">Objetos</a></li>
-                        <li><a href="#">Fantasia</a></li>
+                        <li><a href="fantasia.html">Fantasia</a></li>
                     </ul>
                 </li>
                 <div class="barravertical"></div>
@@ -44,9 +43,8 @@
                     <li onclick="mudar2()">galeria<i class="fas fa-angle-down"></i>
                         <ul class="subGaleria">
                             <li><a href="#">Paisagens</a></li>
-                            <li><a href="animais.html">Animais</a></li>
                             <li><a href="#">Objetos</a></li>
-                            <li><a href="#">Fantasia</a></li>
+                            <li><a href="fantasia.html">Fantasia</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -68,9 +66,6 @@
             <li><a href="fotos-animais/20200704155239_IMG_0031.jpg" target="_blank"><img class="foto"
                         src="fotos-animais/20200704155239_IMG_0031.jpg" alt="Gato" /></a>
                 <p>Nico</p>
-                <div class="autor-foto">
-                    <span>Foto por: <a href="https://www.instagram.com/andnvl/" target="_blank"> Andressa</span></a>
-                </div>
             </li>
 
         </ul>
@@ -78,9 +73,9 @@
     <!--Fim galeria-->
     <footer>
         <div id="contatos" class="conteudo-rodape">
-            <p id="report">Contato <a href="mailto:carlosmelo1295@gmail.com">carlosmelo1295@gmail.com</a></p>
             <span>Agradecemos por sua visita!<br>Site em constante manutenção para o seu melhor proveito.</span>
             <br>
+            <p id="report">Contato <a href="mailto:carlosmelo1295@gmail.com">carlosmelo1295@gmail.com</a></p>
             <div class="redes">
                 <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><i
                         class="fab fa-github-square"></i></a>
