--- a/fantasia.html
+++ b/fantasia.html
@@ -2,13 +2,15 @@
 <html lang='pt-br'>
 
 <head>
-    <title>CoffeeBreak</title>
+    <title>CoffeeBreak/Fantasia</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/coffeebreak.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
+    <link rel="stylesheet" href="css/fantasia.css" type="text/css">
+
 </head>
 
 <body id="conteudo">
@@ -18,14 +20,13 @@
 
     <header>
         <div id="top" class="container-cabecalho">
-            <a href="index.html"> <img src="logos/mug_coffee.png" alt="logo" title="Clique para voltar ao início"></a>
+            <a href="index.html"> <img src="logos/mug_coffee.png" alt="logo"></a>
             <ul class="menu">
                 <li class="linhas-menu"><a href="#galeria">Galeria</a>
                     <ul>
                         <li><a href="">Paisagens</a></li>
                         <li><a href="animais.html">Animais</a></li>
                         <li><a href="#">Objetos</a></li>
-                        <li><a href="fantasia.html">Fantasia</a></li>
                     </ul>
                 </li>
                 <div class="barravertical"></div>
@@ -44,27 +45,24 @@
                             <li><a href="#">Paisagens</a></li>
                             <li><a href="animais.html">Animais</a></li>
                             <li><a href="#">Objetos</a></li>
-                            <li><a href="fantasia.html">Fantasia</a></li>
                         </ul>
                     </li>
                 </ul>
             </ul>
         </div>
-        <div class="subcabecalho">
-            <div class="conteudo-subcabecalho">
-                <h1>Sejam bem-vindos ao universo da imaginação<span class="barra">!</span></h1>
+        <div class="subcabecalho-fantasia">
+            <div class="conteudo-subcabecalho-fantasia">
+                <h1>Mundo da fantasia<span class="barra">!</span></h1>
                 <h4>Imagens espetaculares criadas de artistas para artistas.</h4>
             </div>
             <div class="autor">
-                <span>Foto por <a href="https://unsplash.com/@scheier" target="_blank">@scheier</a></span>
+                <span>Foto por <a href="https://www.instagram.com/coffeebreak.art/"
+                        target="_blank">@coffeebreak</a></span>
             </div>
         </div>
     </header>
-    <div class="destaque">
-        <span>Fotos em destaque</span>
-    </div>
     <!--Começo da galeria de imagens-->
-    <div id="galeria" class="container-galeria">
+    <div id="galeria" class="container-galeria-fantasia">
         <ul class="galeria">
             <li><a href="background/alien-cat.jpg" target="_blank"><img class="foto" src="background/alien-cat.jpg"
                         alt="Gato sendo abduzido" /></a>
@@ -128,8 +126,6 @@
             <br>
         </div>
     </footer>
-
-
 </body>
 
 </html>
