--- a/agradecimentos.html
+++ b/agradecimentos.html
@@ -14,9 +14,7 @@
     <header>
         <div class="barra-cabecalho">
             <ul>
-                <a href="index.html">
-                    <li><i class="fas fa-home"></i> Início</li>
-                </a>
+                <li><a href="index.html"><i class="fas fa-home"></i> Início</a></li>
             </ul>
         </div>
     </header>
@@ -26,30 +24,31 @@
         <br>
 
         <ul class="lista">
-            <li>Meltys-stock
-                <br>
-                Artista por <a href="https://www.deviantart.com/meltys-stock/gallery" target="_blank"> deviantart</a>
+            <li>Meltys-stock <i class="fas fa-caret-down"></i>
+
+                <p>Artista por <a href="https://www.deviantart.com/meltys-stock/gallery" target="_blank"> deviantart</a>
+                </p>
             </li>
-            <br>
-            <li>lumibear
-                <br>
-                artista por <a href="https://www.deviantart.com/lumibear" target="_blank">deviantart</a>
+
+            <li>lumibear <i class="fas fa-caret-down"></i>
+
+                <p>artista por <a href="https://www.deviantart.com/lumibear" target="_blank">deviantart</a></p>
             </li>
-            <br>
-            <li>CamaroGirl666
-                <br>
-                artista por <a href="https://www.deviantart.com/camarogirl666/favourites/12112346/model-stocks"
-                    target="_blank">deviantart</a>
+
+            <li>CamaroGirl666 <i class="fas fa-caret-down"></i>
+
+                <p>artista por <a href="https://www.deviantart.com/camarogirl666/favourites/12112346/model-stocks"
+                        target="_blank">deviantart</a></p>
             </li>
-            <br>
-            <li>Rowan Heuvel
-                <br>
-                artista por <a href="https://unsplash.com/@insolitus" target="_blank">unsplash</a>
+
+            <li>Rowan Heuvel <i class="fas fa-caret-down"></i>
+
+                <p>artista por <a href="https://unsplash.com/@insolitus" target="_blank">unsplash</a></p>
             </li>
-            <br>
-            <li>SenshiStock
-                <br>
-                artista por <a href="https://www.deviantart.com/senshistock/gallery" target="_blank">deviantart</a>
+
+            <li>SenshiStock <i class="fas fa-caret-down"></i>
+
+                <p>artista por <a href="https://www.deviantart.com/senshistock/gallery" target="_blank">deviantart</a></p>
             </li>
         </ul>
     </div>
