--- a/direitos.html
+++ b/direitos.html
@@ -8,14 +8,15 @@
     <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/index.js"></script>
+    <title>Direitos</title>
 
 <body>
     <header>
         <div class="barra-cabecalho">
             <ul>
-                <a href="index.html">
-                    <li><i class="fas fa-home"></i> Início</li>
-                </a>
+
+                <li><a href="index.html"><i class="fas fa-home"></i> Início</a></li>
+
             </ul>
         </div>
     </header>
