--- a/index.html
+++ b/index.html
@@ -28,26 +28,24 @@
                         <li><a href="fantasia.html">Fantasia</a></li>
                     </ul>
                 </li>
-                <div class="barravertical"></div>
                 <li class="linhas-menu"><a href="agradecimentos.html">Agradecimentos</a></li>
-                <div class="barravertical"></div>
                 <li class="linhas-menu"><a href="sobre.html">Sobre</a></li>
             </ul>
-
             <ul class="menu-mobile">
-                <li><i class="fas fa-align-justify" onclick="mudar()"></i></li>
-                <ul class="sub">
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="agradecimentos.html">agradecimentos</a></li>
-                    <li onclick="mudar2()">galeria<i class="fas fa-angle-down"></i>
-                        <ul class="subGaleria">
-                            <li><a href="#">Paisagens</a></li>
-                            <li><a href="animais.html">Animais</a></li>
-                            <li><a href="#">Objetos</a></li>
-                            <li><a href="fantasia.html">Fantasia</a></li>
-                        </ul>
-                    </li>
-                </ul>
+                <li><i class="fas fa-align-justify" onclick="mudar()"></i>
+                    <ul class="sub">
+                        <li><a href="sobre.html">Sobre</a></li>
+                        <li><a href="agradecimentos.html">agradecimentos</a></li>
+                        <li onclick="mudar2()">galeria<i class="fas fa-angle-down"></i>
+                            <ul class="subGaleria">
+                                <li><a href="#">Paisagens</a></li>
+                                <li><a href="animais.html">Animais</a></li>
+                                <li><a href="#">Objetos</a></li>
+                                <li><a href="fantasia.html">Fantasia</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
         <div class="subcabecalho">
@@ -99,7 +97,7 @@
             <li><a href="background/tinta.jpg" target="_blank"><img class="foto" src="background/tinta.jpg"
                         alt="Mulher em uma ventania" /></a>
                 <p>E o vento levou.</p>
-                <div class="autor-foto">
+
             </li>
 
             <li><a href="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" target="_blank"><img class="foto"
@@ -121,7 +119,7 @@
                 <a href="https://www.instagram.com/coffeebreak.art/" target="_blank"><i
                         class="fab fa-instagram"></i></a>
 
-                <a href="direitos.html"><button class="botao">Direitos</button></a>
+                <button class="botao" onclick="window.location.href='direitos.html'">Direitos</button>
             </div>
             <span>Criado por Carlos Eduardo ©
                 2020. Todos os direitos reservados. </span>
