--- a/sobre.html
+++ b/sobre.html
@@ -12,8 +12,6 @@
 </head>
 
 <body>
-    
-
     <div class="barratopo">
         <ul class="menu">
             <li><i class="fas fa-home"></i><a href="index.html">Início</a></li>
@@ -22,50 +20,45 @@
     </div>
 
     <!--Conteúdo sobre o autor-->
-    <article>
-        <div class="box-principal-autor">
-            <div class="box-sobre-autor">
+    <div class="box-principal-autor">
+        <div class="box-sobre-autor">
 
-                <img class="minhafoto" src="sobre-fotos/me.jpg" alt="foto do autor" title="Carlos Eduardo. Junior Front And e design">
-                <p>Para começar este breve resumo, gostaria de me apresentar.
-                    <br>
-                    Eu me chamo Carlos Eduardo, Moro na cidade do Rio de Janeiro, tenho 24 anos e sou
-                    apaixonado
-                    por tecnologia <i class="fas fa-laptop"></i> e animais. <i class="fas fa-dog"></i></p>
+            <img class="minhafoto" src="sobre-fotos/me.jpg" alt="foto do autor"
+                title="Carlos Eduardo. Junior Front And e design">
+            <p>Para começar este breve resumo, gostaria de me apresentar.
+                <br>
+                Eu me chamo Carlos Eduardo, Moro na cidade do Rio de Janeiro, tenho 24 anos e sou
+                apaixonado
+                por tecnologia <i class="fas fa-laptop"></i> e animais. <i class="fas fa-dog"></i></p>
 
-                <p> No final de 2018 tive um breve contato com a ferramenta PhotoShop em um trabalho que
-                    tive em uma
-                    LanHouse, gostei bastante da experiência e desde então resolvi estudar por completo a ferramenta e postar
-                    minhas
-                    manipulações no Instagram, mas devido ao baixo reconhecimento por este tipo de conteúdo na
-                    plataforma,
-                    resolvi aprender um pouco de desenvolvimento web para criar um site com minhas ideias sem
-                    precisar
-                    gastar dinheiro com isso e, assim, publicar meu material e aprender algo novo durante a
-                    quarentena, mas acabou que achei incrível e decidi me
-                    aprofundar
-                    mais no assunto e estudar pra valer.</p>
-            </div>
+            <p> No final de 2018 tive um breve contato com a ferramenta PhotoShop em um trabalho que
+                tive em uma
+                LanHouse, gostei bastante da experiência e desde então resolvi estudar por completo a ferramenta e
+                postar
+                minhas
+                manipulações no Instagram, mas devido ao baixo reconhecimento por este tipo de conteúdo na
+                plataforma,
+                resolvi aprender um pouco de desenvolvimento web para criar um site com minhas ideias sem
+                precisar
+                gastar dinheiro com isso e, assim, publicar meu material e aprender algo novo durante a
+                quarentena, mas acabou que achei incrível e decidi me
+                aprofundar
+                mais no assunto e estudar pra valer.</p>
         </div>
-    </article>
+    </div>
     <!--Conteúdo sobre o site-->
-    <article>
-        <div class="box-principal-site">
-            <div class="box-sobre-site">
+    <div class="box-principal-site">
+        <div class="box-sobre-site">
 
-                <p>A curto prazo o projeto CoffeBreak foi criado com o intuito de divulgar manipulações criadas por mim
-                    com o Photoshop, mas durante o desenvolvimento da página me veio os seguintes planos em mente: E se
-                    ao invés de publicar fotos feitas só por mim, também tivesse um espaço para artistas? que queiram
-                    divulgar seu trabalho de forma simples, sem gastar com isso e em uma plataforma totalmente
-                    brasileira aonde os artistas tenham total reconhecimento pelo seu trabalho, e assim, encontrar o
-                    combustível para que se mantenham motivados.
-                </p>
-
-
-            </div>
+            <p>A curto prazo o projeto CoffeBreak foi criado com o intuito de divulgar manipulações criadas por mim
+                com o Photoshop, mas durante o desenvolvimento da página me veio os seguintes planos em mente: E se
+                ao invés de publicar fotos feitas só por mim, também tivesse um espaço para artistas? que queiram
+                divulgar seu trabalho de forma simples, sem gastar com isso e em uma plataforma totalmente
+                brasileira aonde os artistas tenham total reconhecimento pelo seu trabalho, e assim, encontrar o
+                combustível para que se mantenham motivados.
+            </p>
         </div>
-    </article>
-
+    </div>
     <footer>
         <div class="rodape">
             <span>Criado por Carlos
