--- a/animais.html
+++ b/animais.html
@@ -2,7 +2,7 @@
 <html lang='pt-br'>
 
 <head>
-    <title>CoffeeBreak/Animais</title>
+    <title>Animais</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/coffeebreak.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,25 +29,23 @@
                         <li><a href="fantasia.html">Fantasia</a></li>
                     </ul>
                 </li>
-                <div class="barravertical"></div>
                 <li class="linhas-menu"><a href="agradecimentos.html">Agradecimentos</a></li>
-                <div class="barravertical"></div>
                 <li class="linhas-menu"><a href="sobre.html">Sobre</a></li>
             </ul>
-
             <ul class="menu-mobile">
-                <li><i class="fas fa-align-justify" onclick="mudar()"></i></li>
-                <ul class="sub">
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="agradecimentos.html">agradecimentos</a></li>
-                    <li onclick="mudar2()">galeria<i class="fas fa-angle-down"></i>
-                        <ul class="subGaleria">
-                            <li><a href="#">Paisagens</a></li>
-                            <li><a href="#">Objetos</a></li>
-                            <li><a href="fantasia.html">Fantasia</a></li>
-                        </ul>
-                    </li>
-                </ul>
+                <li><i class="fas fa-align-justify" onclick="mudar()"></i>
+                    <ul class="sub">
+                        <li><a href="sobre.html">Sobre</a></li>
+                        <li><a href="agradecimentos.html">agradecimentos</a></li>
+                        <li onclick="mudar2()">galeria<i class="fas fa-angle-down"></i>
+                            <ul class="subGaleria">
+                                <li><a href="">Paisagens</a></li>
+                                <li><a href="#">Objetos</a></li>
+                                <li><a href="fantasia.html">Fantasia</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
         <div class="subcabecalho-animais">
@@ -82,7 +80,7 @@
                 <a href="https://www.instagram.com/coffeebreak.art/" target="_blank"><i
                         class="fab fa-instagram"></i></a>
 
-                <a href="direitos.html"><button class="botao">Direitos</button></a>
+                <button class="botao" onclick="window.location.href='direitos.html'">Direitos</button>
             </div>
             <span>Criado por Carlos Eduardo ©
                 2020. Todos os direitos reservados. </span>
