--- a/direitos.html
+++ b/direitos.html
@@ -1,64 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
+  <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/direitos.css">
     <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/index.js"></script>
     <title>Direitos</title>
-
-<body>
+  <body>
     <header>
-        <div class="barra-cabecalho">
-            <ul>
-
-                <li><a href="index.html"><i class="fas fa-home"></i> Início</a></li>
-
-            </ul>
-        </div>
+      <div class="barra-cabecalho">
+        <ul>
+          <li><a href="index.html"><i class="fas fa-home"></i> Início</a></li>
+        </ul>
+      </div>
     </header>
-
     <div class="container">
-        <div class="permitido">
-            <h2>O que é permitido?</h2>
-            <br>
-            <i class="fas fa-check-double"></i><span>Baixar, compartilhar e modificar as imagens.</span>
-
-            <div class="npermitido">
-
-                <h2>O que não é permitido?</h2>
-                <br>
-                <i class="far fa-times-circle"></i><span>Usar as imagens para fins comerciais sem autorização do autor.
-                </span>
-                <br>
-                <i class="far fa-times-circle"></i><span>Usar as imagens de maneiras que possam ser consideradas
-                    ofensivas.</span>
-                <br>
-                <i class="far fa-times-circle"></i><span>Esta página foi criada do zero, portando não é permitido a sua
-                    reprodução sem autorização do autor.</span>
-
-            </div>
-
-            <div class="lembrete"><i class="fas fa-brain"></i><span>Lembrando que algumas das fotos usadas neste site
-                    foram criadas a partir de conteúdo de terceiros.
-                    <br>
-                    Para saber mais confira os <a href="agradecimentos.html">Agradecimentos.</a></span></div>
+      <div class="permitido">
+        <h2>O que é permitido?</h2>
+        <br>
+        <i class="fas fa-check-double"></i><span>Baixar, compartilhar e modificar as imagens.</span>
+        <div class="npermitido">
+          <h2>O que não é permitido?</h2>
+          <br>
+          <i class="far fa-times-circle"></i><span>Usar as imagens para fins comerciais sem autorização do autor.
+          </span>
+          <br>
+          <i class="far fa-times-circle"></i><span>Usar as imagens de maneiras que possam ser consideradas
+          ofensivas.</span>
+          <br>
+          <i class="far fa-times-circle"></i><span>Esta página foi criada do zero, portando não é permitido a sua
+          reprodução sem autorização do autor.</span>
         </div>
-
-
+        <div class="lembrete"><i class="fas fa-brain"></i><span>Lembrando que algumas das fotos usadas neste site
+          foram criadas a partir de conteúdo de terceiros.
+          <br>
+          Para saber mais confira os <a href="agradecimentos.html">Agradecimentos.</a></span>
+        </div>
+      </div>
     </div>
-
     <footer>
-        <div class="rodape">
-            <span>Criado por Carlos
-                Eduardo ©
-                2020. Todos os direitos reservados.</span>
-        </div>
+      <div class="rodape">
+        <span>Criado por Carlos
+        Eduardo ©
+        2020. Todos os direitos reservados.</span>
+      </div>
     </footer>
-
-</body>
-
+  </body>
 </html>
