--- a/animais.html
+++ b/animais.html
@@ -2,93 +2,84 @@
 <html lang='pt-br'>
 
 <head>
-    <title>Animais</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/coffeebreak.css" type="text/css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
-    <link rel="stylesheet" href="css/animais.css" type="text/css">
-
+  <title>Animais</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/coffeebreak.css" type="text/css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
+  <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
+  <script src="main.js"></script>
+  <link rel="stylesheet" href="css/animais.css" type="text/css">
 </head>
 
 <body id="conteudo">
-    <div id="carregando">
-        <i class="fas fa-sync"></i>
-    </div>
-
-    <header>
-        <div id="top" class="container-cabecalho">
-            <a href="index.html"> <img src="logos/mug_coffee.png" alt="logo"></a>
-            <ul class="menu">
-                <li class="linhas-menu"><a href="#galeria">Galeria</a>
-                    <ul>
-                        <li><a href="">Paisagens</a></li>
-                        <li><a href="#">Objetos</a></li>
-                        <li><a href="fantasia.html">Fantasia</a></li>
-                    </ul>
-                </li>
-                <li class="linhas-menu"><a href="agradecimentos.html">Agradecimentos</a></li>
-                <li class="linhas-menu"><a href="sobre.html">Sobre</a></li>
+  <header>
+    <div id="top" class="container-cabecalho">
+      <a href="index.html"> <img src="logos/mug_coffee.png" alt="logo"></a>
+      <ul class="menu">
+        <li class="linhas-menu">
+          <a href="#galeria">Galeria</a>
+          <ul>
+            <li><a href="">Paisagens</a></li>
+            <li><a href="#">Objetos</a></li>
+            <li><a href="fantasia.html">Fantasia</a></li>
+          </ul>
+        </li>
+        <li class="linhas-menu"><a href="agradecimentos.html">Agradecimentos</a></li>
+        <li class="linhas-menu"><a href="sobre.html">Sobre</a></li>
+      </ul>
+      <nav class="menu-mobile">
+        <img class="icon-menu" onclick="mudar()" src="icones/iconfinder_basics-12_296823.png" alt="ícone do menu">
+        <ul class="sub">
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="agradecimentos.html">agradecimentos</a></li>
+          <li onclick="mudar2()">
+            galeria<i class="fas fa-angle-down"></i>
+            <ul class="subGaleria">
+              <li><a href="">Paisagens</a></li>
+              <li><a href="#">Objetos</a></li>
+              <li><a href="fantasia.html">Fantasia</a></li>
             </ul>
-            <ul class="menu-mobile">
-                <li><i class="fas fa-align-justify" onclick="mudar()"></i>
-                    <ul class="sub">
-                        <li><a href="sobre.html">Sobre</a></li>
-                        <li><a href="agradecimentos.html">agradecimentos</a></li>
-                        <li onclick="mudar2()">galeria<i class="fas fa-angle-down"></i>
-                            <ul class="subGaleria">
-                                <li><a href="">Paisagens</a></li>
-                                <li><a href="#">Objetos</a></li>
-                                <li><a href="fantasia.html">Fantasia</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="subcabecalho-animais">
-            <div class="conteudo-subcabecalho-animais">
-                <h1>Os melhores amigos<span class="barra">!</span></h1>
-                <h4>Imagens espetaculares criadas de artistas para artistas.</h4>
-            </div>
-            <div class="autor">
-                <span>Foto por <a href="https://www.instagram.com/andnvl/" target="_blank">@Andressa Novelo</a></span>
-            </div>
-        </div>
-    </header>
-    <!--Começo da galeria de imagens-->
-    <div id="galeria" class="container-galeria-animais">
-        <ul class="galeria">
-            <li><a href="fotos-animais/20200704155239_IMG_0031.jpg" target="_blank"><img class="foto"
-                        src="fotos-animais/20200704155239_IMG_0031.jpg" alt="Gato" /></a>
-                <p>Nico</p>
-            </li>
-
+          </li>
         </ul>
+      </nav>
     </div>
-    <!--Fim galeria-->
-    <footer>
-        <div id="contatos" class="conteudo-rodape">
-            <span>Agradecemos por sua visita!<br>Site em constante manutenção para o seu melhor proveito.</span>
-            <br>
-            <p id="report">Contato <a href="mailto:carlosmelo1295@gmail.com">carlosmelo1295@gmail.com</a></p>
-            <div class="redes">
-                <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><i
-                        class="fab fa-github-square"></i></a>
-                <a href="https://www.instagram.com/coffeebreak.art/" target="_blank"><i
-                        class="fab fa-instagram"></i></a>
-
-                <button class="botao" onclick="window.location.href='direitos.html'">Direitos</button>
-            </div>
-            <span>Criado por Carlos Eduardo ©
-                2020. Todos os direitos reservados. </span>
-            <br>
-        </div>
-    </footer>
-
-
+    <div class="subcabecalho-animais">
+      <div class="conteudo-subcabecalho-animais">
+        <h1>Os melhores amigos<span class="barra">!</span></h1>
+        <h4>Imagens espetaculares criadas de artistas para artistas.</h4>
+      </div>
+      <div class="autor">
+        <span>Foto por <a href="https://www.instagram.com/andnvl/" target="_blank">@Andressa Novelo</a></span>
+      </div>
+    </div>
+  </header>
+  <!--Começo da galeria de imagens-->
+  <div id="galeria" class="container-galeria">
+    <ul class="galeria">
+      <li>
+        <a href="fotos-animais/20200704155239_IMG_0031.jpg" target="_blank"><img class="foto"
+            src="fotos-animais/20200704155239_IMG_0031.jpg" alt="Gato" /></a>
+        <p>Nico</p>
+      </li>
+    </ul>
+  </div>
+  <!--Fim galeria-->
+  <footer>
+    <div id="contatos" class="conteudo-rodape">
+      <span>Agradecemos por sua visita!<br>Site em constante manutenção para o seu melhor proveito.</span>
+      <br>
+      <p id="report">Contato <a href="mailto:carlosmelo1295@gmail.com">carlosmelo1295@gmail.com</a></p>
+      <div class="redes">
+        <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><i class="fab fa-github-square"></i></a>
+        <a href="https://www.instagram.com/coffeebreak.art/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <button class="botao" onclick="window.location.href='direitos.html'">Direitos</button>
+      </div>
+      <span>Criado por Carlos Eduardo ©
+        2020. Todos os direitos reservados. </span>
+      <br>
+    </div>
+  </footer>
 </body>
 
 </html>
