--- a/index.html
+++ b/index.html
@@ -2,132 +2,136 @@
 <html lang='pt-br'>
 
 <head>
-    <title>CoffeeBreak</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/coffeebreak.css" type="text/css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+  <title>CoffeeBreak</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/coffeebreak.css" type="text/css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
+  <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
+  <script src="main.js"></script>
 </head>
 
 <body id="conteudo">
-    <div id="carregando">
-        <i class="fas fa-sync"></i>
-    </div>
-
-    <header>
-        <div id="top" class="container-cabecalho">
-            <a href="index.html"> <img src="logos/mug_coffee.png" alt="logo" title="Clique para voltar ao início"></a>
-            <ul class="menu">
-                <li class="linhas-menu"><a href="#galeria">Galeria</a>
-                    <ul>
-                        <li><a href="">Paisagens</a></li>
-                        <li><a href="animais.html">Animais</a></li>
-                        <li><a href="#">Objetos</a></li>
-                        <li><a href="fantasia.html">Fantasia</a></li>
-                    </ul>
-                </li>
-                <li class="linhas-menu"><a href="agradecimentos.html">Agradecimentos</a></li>
-                <li class="linhas-menu"><a href="sobre.html">Sobre</a></li>
+  <header>
+    <div id="top" class="container-cabecalho">
+      <a href="index.html"> <img src="logos/mug_coffee.png" alt="logo" title="Clique para voltar ao início"></a>
+      <ul class="menu">
+        <li class="linhas-menu">
+          <a href="#galeria">Galeria</a>
+          <ul>
+            <li><a href="">Paisagens</a></li>
+            <li><a href="animais.html">Animais</a></li>
+            <li><a href="#">Objetos</a></li>
+            <li><a href="fantasia.html">Fantasia</a></li>
+          </ul>
+        </li>
+        <li class="linhas-menu"><a href="agradecimentos.html">Agradecimentos</a></li>
+        <li class="linhas-menu"><a href="sobre.html">Sobre</a></li>
+      </ul>
+      <nav class="menu-mobile">
+        <img class="icon-menu" onclick="mudar()" src="icones/iconfinder_basics-12_296823.png" alt="ícone do menu">
+        <ul class="sub">
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="agradecimentos.html">agradecimentos</a></li>
+          <li onclick="mudar2()">
+            galeria<i class="fas fa-angle-down"></i>
+            <ul class="subGaleria">
+              <li><a href="#">Paisagens</a></li>
+              <li><a href="animais.html">Animais</a></li>
+              <li><a href="#">Objetos</a></li>
+              <li><a href="fantasia.html">Fantasia</a></li>
             </ul>
-            <ul class="menu-mobile">
-                <li><i class="fas fa-align-justify" onclick="mudar()"></i>
-                    <ul class="sub">
-                        <li><a href="sobre.html">Sobre</a></li>
-                        <li><a href="agradecimentos.html">agradecimentos</a></li>
-                        <li onclick="mudar2()">galeria<i class="fas fa-angle-down"></i>
-                            <ul class="subGaleria">
-                                <li><a href="#">Paisagens</a></li>
-                                <li><a href="animais.html">Animais</a></li>
-                                <li><a href="#">Objetos</a></li>
-                                <li><a href="fantasia.html">Fantasia</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="subcabecalho">
-            <div class="conteudo-subcabecalho">
-                <h1>Sejam bem-vindos ao universo da imaginação<span class="barra">!</span></h1>
-                <h4>Imagens espetaculares criadas de artistas para artistas.</h4>
-            </div>
-            <div class="autor">
-                <span>Foto por <a href="https://unsplash.com/@scheier" target="_blank">@scheier</a></span>
-            </div>
-        </div>
-    </header>
-    <div class="destaque">
-        <span>Fotos em destaque</span>
-    </div>
-    <!--Começo da galeria de imagens-->
-    <div id="galeria" class="container-galeria">
-        <ul class="galeria">
-            <li><a href="background/alien-cat.jpg" target="_blank"><img class="foto" src="background/alien-cat.jpg"
-                        alt="Gato sendo abduzido" /></a>
-                <p>Abdução.</p>
-            </li>
-
-            <li><a href="background/olharAtento.jpg" target="_blank"><img class="foto" src="background/olharAtento.jpg"
-                        alt="Mulher observando uma fogueira" /></a>
-                <p>Olhar atento.</p>
-            </li>
-
-            <li><a href="background/1080.jpg" target="_blank"><img class="foto" src="background/1080.jpg"
-                        alt="Navegando no espaço" /></a>
-                <p>A felicidade pode ser encontrada mesmo nas horas mais difíceis, se você lembrar de acender a luz.</p>
-            </li>
-
-            <li><a href="background/spacecar.jpg" target="_blank"><img class="foto" src="background/spacecar.jpg"
-                        alt="Carro no espaço" /></a>
-                <p>Carro espacial.</p>
-            </li>
-
-            <li><a href="background/SpaceMan.jpg" target="_blank"><img class="foto" src="background/SpaceMan.jpg"
-                        alt="Astronauta na lua" /></a>
-                <p>Um pequeno passo para o homem mas um grande passo para a humanidade.</p>
-            </li>
-
-            <li><a href="background/blur.jpg" target="_blank"><img class="foto" src="background/blur.jpg"
-                        alt="Fotógrafo" /></a>
-                <p>A fotografia é uma das poucas coisas que tem poder sobre o tempo: ela o paralisa.</p>
-            </li>
-
-            <li><a href="background/tinta.jpg" target="_blank"><img class="foto" src="background/tinta.jpg"
-                        alt="Mulher em uma ventania" /></a>
-                <p>E o vento levou.</p>
-
-            </li>
-
-            <li><a href="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" target="_blank"><img class="foto"
-                        src="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" alt="portal do tempo" /></a>
-                <p>Quando você olha muito tempo para o abismo, o abismo olha para você.</p>
-            </li>
-
+          </li>
         </ul>
+      </nav>
     </div>
-    <!--Fim galeria-->
-    <footer>
-        <div id="contatos" class="conteudo-rodape">
-            <span>Agradecemos por sua visita!<br>Site em constante manutenção para o seu melhor proveito.</span>
-            <br>
-            <p id="report">Contato <a href="mailto:carlosmelo1295@gmail.com">carlosmelo1295@gmail.com</a></p>
-            <div class="redes">
-                <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><i
-                        class="fab fa-github-square"></i></a>
-                <a href="https://www.instagram.com/coffeebreak.art/" target="_blank"><i
-                        class="fab fa-instagram"></i></a>
-
-                <button class="botao" onclick="window.location.href='direitos.html'">Direitos</button>
-            </div>
-            <span>Criado por Carlos Eduardo ©
-                2020. Todos os direitos reservados. </span>
-            <br>
-        </div>
-    </footer>
-
-
+    <div class="subcabecalho">
+      <div class="conteudo-subcabecalho">
+        <h1>Sejam bem-vindos ao universo da imaginação<span class="barra">!</span></h1>
+        <h4>Imagens espetaculares criadas de artistas para artistas.</h4>
+      </div>
+      <div class="autor">
+        <span>Foto por <a href="https://unsplash.com/@scheier" target="_blank">@scheier</a></span>
+      </div>
+    </div>
+  </header>
+  <div class="destaque">
+    <span>Fotos em destaque</span>
+  </div>
+  <!--Começo da galeria de imagens-->
+  <div id="galeria" class="container-galeria">
+    <ul class="galeria">
+      <li>
+        <a href="background/alien-cat.jpg" target="_blank"><img class="foto" src="background/alien-cat.jpg"
+            alt="Gato sendo abduzido" /></a>
+        <p>Abdução.</p>
+      </li>
+      <li>
+        <a href="background/olharAtento.jpg" target="_blank"><img class="foto" src="background/olharAtento.jpg"
+            alt="Mulher observando uma fogueira" /></a>
+        <p>Olhar atento.</p>
+      </li>
+      <li>
+        <a href="background/1080.jpg" target="_blank"><img class="foto" src="background/1080.jpg"
+            alt="Navegando no espaço" /></a>
+        <p>A felicidade pode ser encontrada mesmo nas horas mais difíceis, se você lembrar de acender a luz.</p>
+      </li>
+      <li>
+        <a href="background/spacecar.jpg" target="_blank"><img class="foto" src="background/spacecar.jpg"
+            alt="Carro no espaço" /></a>
+        <p>Carro espacial.</p>
+      </li>
+      <li>
+        <a href="background/SpaceMan.jpg" target="_blank"><img class="foto" src="background/SpaceMan.jpg"
+            alt="Astronauta na lua" /></a>
+        <p>Um pequeno passo para o homem mas um grande passo para a humanidade.</p>
+      </li>
+      <li>
+        <a href="background/blur.jpg" target="_blank"><img class="foto" src="background/blur.jpg" alt="Fotógrafo" /></a>
+        <p>A fotografia é uma das poucas coisas que tem poder sobre o tempo: ela o paralisa.</p>
+      </li>
+      <li>
+        <a href="background/tinta.jpg" target="_blank"><img class="foto" src="background/tinta.jpg"
+            alt="Mulher em uma ventania" /></a>
+        <p>E o vento levou.</p>
+      </li>
+      <li>
+        <a href="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" target="_blank"><img class="foto"
+            src="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" alt="portal do tempo" /></a>
+        <p>Quando você olha muito tempo para o abismo, o abismo olha para você.</p>
+      </li>
+      <li>
+        <a href="background/web-min.jpg" target="_blank"><img class="foto"
+            src="background/web-min.jpg" alt="apontando uma variha" /></a>
+        <p>É leviosa e não leviosáaa</p>
+      </li>
+      <li>
+        <a href="background/kraken-min.jpg" target="_blank"><img class="foto"
+            src="background/kraken-min.jpg" alt="kraken destruindo um navio"/></a>
+        <p>kraken</p>
+      </li>
+      <li>
+        <a href="background/patron-min.jpg" target="_blank"><img class="foto"
+            src="background/patron-min.jpg" alt="conjudando um patrono"/></a>
+        <p>Expecto Patronum</p>
+      </li>
+    </ul>
+  </div>
+  <!--Fim galeria-->
+  <footer>
+    <div id="contatos" class="conteudo-rodape">
+      <span>Agradecemos por sua visita!<br>Site em constante manutenção para o seu melhor proveito.</span>
+      <br>
+      <p id="report">Contato <a href="mailto:carlosmelo1295@gmail.com">carlosmelo1295@gmail.com</a></p>
+      <div class="redes">
+        <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><i class="fab fa-github-square"></i></a>
+        <a href="https://www.instagram.com/coffeebreak.art/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <button class="botao" onclick="window.location.href='direitos.html'">Direitos</button>
+      </div>
+      <span>Criado por Carlos Eduardo ©
+        2020. Todos os direitos reservados. </span>
+    </div>
+  </footer>
 </body>
 
 </html>
