--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>CoffeeBreak</title>
   <meta charset="UTF-8">
+  <meta name=”description”
+    content="Plataforma criada especialmente para você que gosta de manipular imagens e quer divulgar seu trabalho de uma forma simples e em um ambiente totalmente em português.">
   <link rel="stylesheet" href="css/coffeebreak.css" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
@@ -101,19 +103,24 @@
         <p>Quando você olha muito tempo para o abismo, o abismo olha para você.</p>
       </li>
       <li>
-        <a href="background/web-min.jpg" target="_blank"><img class="foto"
-            src="background/web-min.jpg" alt="apontando uma variha" /></a>
+        <a href="background/web-min.jpg" target="_blank"><img class="foto" src="background/web-min.jpg"
+            alt="apontando uma variha" /></a>
         <p>É leviosa e não leviosáaa</p>
       </li>
       <li>
-        <a href="background/kraken-min.jpg" target="_blank"><img class="foto"
-            src="background/kraken-min.jpg" alt="kraken destruindo um navio"/></a>
+        <a href="background/kraken-min.jpg" target="_blank"><img class="foto" src="background/kraken-min.jpg"
+            alt="kraken destruindo um navio" /></a>
         <p>kraken</p>
       </li>
       <li>
-        <a href="background/patron-min.jpg" target="_blank"><img class="foto"
-            src="background/patron-min.jpg" alt="conjudando um patrono"/></a>
+        <a href="background/patron-min.jpg" target="_blank"><img class="foto" src="background/patron-min.jpg"
+            alt="conjudando um patrono" /></a>
         <p>Expecto Patronum</p>
+      </li>
+      <li>
+        <a href="background/dudu.jpg" target="_blank"><img class="foto" src="background/dudu.jpg"
+            alt="Executando o feitiço (leviosa)" /></a>
+        <p>wingardium leviosa</p>
       </li>
     </ul>
   </div>
