--- a/fantasia.html
+++ b/fantasia.html
@@ -97,19 +97,29 @@
         <p>Quando você olha muito tempo para o abismo, o abismo olha para você.</p>
       </li>
       <li>
-        <a href="background/web-min.jpg" target="_blank"><img class="foto"
-            src="background/web-min.jpg" alt="apontando uma variha" /></a>
+        <a href="background/web-min.jpg" target="_blank"><img class="foto" src="background/web-min.jpg"
+            alt="apontando uma variha" /></a>
         <p>É leviosa e não leviosáaa</p>
       </li>
       <li>
-        <a href="background/kraken-min.jpg" target="_blank"><img class="foto"
-            src="background/kraken-min.jpg" alt="kraken destruindo um navio"/></a>
+        <a href="background/kraken-min.jpg" target="_blank"><img class="foto" src="background/kraken-min.jpg"
+            alt="kraken destruindo um navio" /></a>
         <p>kraken</p>
       </li>
       <li>
-        <a href="background/patron-min.jpg" target="_blank"><img class="foto"
-            src="background/patron-min.jpg" alt="conjudando um patrono"/></a>
+        <a href="background/patron-min.jpg" target="_blank"><img class="foto" src="background/patron-min.jpg"
+            alt="conjudando um patrono" /></a>
         <p>Expecto Patronum</p>
+      </li>
+      <li>
+        <a href="background/dudu.jpg" target="_blank"><img class="foto" src="background/dudu.jpg"
+            alt="Executando o feitiço (leviosa)" /></a>
+        <p>wingardium leviosa</p>
+      </li>
+      <li>
+        <a href="background/christmas.jpg" target="_blank"><img class="foto" src="background/christmas.jpg"
+            alt="Natal" /></a>
+        <p>Ah o natal... data que tudo fica de um jeitinho mágico. &#127877;&#127996;</p>
       </li>
     </ul>
   </div>
