--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='pt-br'>
 
 <head>
-  <title>CoffeeBreak</title>
+  <title>CoffeeBreak - Fotos incríveis criadas de artistas para artistas</title>
   <meta charset="UTF-8">
   <meta name=”description”
     content="Plataforma criada especialmente para você que gosta de manipular imagens e quer divulgar seu trabalho de uma forma simples e em um ambiente totalmente em português.">
@@ -53,10 +53,10 @@
       <div class="conteudo-subcabecalho">
         <h1>Sejam bem-vindos ao universo da imaginação<span class="barra">!</span></h1>
         <h4>Imagens espetaculares criadas de artistas para artistas.</h4>
-        <form method="get">
+        <form action="/customers/search/SmartSearch" method="get">
           <div class="procura">
             <input type="search" name="search" id="procura" placeholder="Buscar imagem...">
-            <input type="submit" value="Buscar" id="btn">
+            <input type="submit" value="&#128269;" id="btn">
           </div>
         </form>
       </div>
@@ -129,9 +129,10 @@
   <section class="dicas">
     <div class="dicas_conteudo">
       <h3>Algumas dicas simples sobre o painel de camadas para quem está começando.</h3>
+      <hr>
       <ol>
         <li>Antes de por a mão na massa, estude a interface e principalmente o painel de ferramentas que
-          aparecerá no lado esquerdo da tela como na foto abaixo, ou siga o link &#10145; <a href="#">Clique aqui para
+          aparecerá no lado esquerdo da tela como na foto abaixo ou siga o link &#10145; <a href="https://helpx.adobe.com/br/photoshop/using/tools.html" target="_blank">Clique aqui para
             saber mais.</a>
           <img src="dicas/painel.jpg" alt="Interface Photoshop">
         </li>
